separate application and transport level dtos
